# realistic-al

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_cifar.sh  run_cifar10.sh  run_cifar10_fixmatch.sh  run_cifar10_pre-fixmatch.sh  run_cifar10_pretrained.sh  run_fashion_mnist.sh  run_mnist.sh
analysis/: AUBC.ipynb  Automated-Active-Plots_v2.ipynb  Obtain-Values.ipynb  Pairwise-Penalty.ipynb  README.md  dataframe.py  ipynb_setup.py  obtain_metrics.py  plot.py  results_overview.ipynb
docs/: integration.md
ipynb/: ._results_overview.ipynb  AUBC.ipynb  Analysis.ipynb  Automated-Active-Plots.ipynb  Cifar10 eval.ipynb  Cifar100 eval.ipynb  FGVC Aircraft Visualization.ipynb  Interactive Results.ipynb  MNIST Readout.ipynb  Obtain-Values.ipynb  Pairwise-Comparison.ipynb  Pairwise-Penalty.ipynb  dataframe.py  make_plots.py  plot.py  results_overview.ipynb
launcher/: cifar10_fixmatch-pretrained.py  cifar10_fixmatch.py  launcher.py  sweep_cifar10_fixmatch_pretrained.py  sweep_cifar10fixmatch.py
launchers/: README.md  abl_cifar100_bb-pretrained.py  abl_cifar100_qs-pretrained.py  abl_cifar10_bb-pretrained.py  abl_cifar10imb_bb-pretrained.py  abl_cifar10imb_bb-pretrained_balanced.py  abl_isic2019_bb-pretrained.py  abl_isic2019_bb-pretrained_balanced.py  abl_isic2019_dip.py  abl_isic2019_dip_balanced.py  abl_isic2019_qs-pretrained_balanced.py  abl_miotc_dip.py  abl_miotc_dip_balanced.py  abl_miotcd_bb-pretrained.py  abl_miotcd_bb-pretrained_balanced.py  abl_miotcd_weighted.py  cifar100_basic-pretrained.py  cifar100_basic.py  cifar100_fixmatch.py  cifar10_basic.py  (+84 more)
(+187 files in other folders)
